app/archive/chatbot-ui/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-chatbot-ui
  labels:
    istio.io/rev: asm-1-17
