app/archive/chatbot-ui/chatbot-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns-chatbot-ui
  name: chatbot-ui
  labels:
    app: chatbot-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-ui
  template:
    metadata:
      labels:
        app: chatbot-ui
    spec:
      containers:
        - name: chatbot-ui
          image: ghcr.io/pichuang/chatbot-ui:devdaysasia2023
          resources: {}
          ports:
            - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  namespace: ns-chatbot-ui
  name: svc-chatbot-ui
  labels:
    app: chatbot-ui
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: chatbot-ui
  type: ClusterIP
